docs/api/qiskit/0.43/qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.mdx
---
title: RZXCalibrationBuilderNoEcho
description: API reference for qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho
---

# RZXCalibrationBuilderNoEcho

<Class id="qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/transpiler/passes/calibration/rzx_builder.py" signature="RZXCalibrationBuilderNoEcho(*args, **kwargs)">
  Bases: [`RZXCalibrationBuilder`](qiskit.transpiler.passes.RZXCalibrationBuilder "qiskit.transpiler.passes.calibration.rzx_builder.RZXCalibrationBuilder")

  Creates calibrations for RZXGate(theta) by stretching and compressing Gaussian square pulses in the CX gate.

  The `RZXCalibrationBuilderNoEcho` is a variation of the [`RZXCalibrationBuilder`](qiskit.transpiler.passes.RZXCalibrationBuilder "qiskit.transpiler.passes.RZXCalibrationBuilder") pass that creates calibrations for the cross-resonance pulses without inserting the echo pulses in the pulse schedule. This enables exposing the echo in the cross-resonance sequence as gates so that the transpiler can simplify them. The `RZXCalibrationBuilderNoEcho` only supports the hardware-native direction of the CX gate.

  Initializes a RZXGate calibration builder.

  <Admonition title="Deprecated since version 0.22.0" type="danger">
    `qiskit.transpiler.passes.calibration.rzx_builder.RZXCalibrationBuilder.__init__()`’s argument `qubit_channel_mapping` is deprecated as of qiskit-terra 0.22.0. It will be removed no earlier than 3 months after the release date.
  </Admonition>

  **Parameters**

  *   **instruction\_schedule\_map** – The `InstructionScheduleMap` object representing the default pulse calibrations for the target backend
  *   **qubit\_channel\_mapping** – The list mapping qubit indices to the list of channel names that apply on that qubit.
  *   **verbose** – Set True to raise a user warning when RZX schedule cannot be built.
  *   **target** – The [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") representing the target backend, if both `instruction_schedule_map` and this are specified then this argument will take precedence and `instruction_schedule_map` will be ignored.

  **Raises**

  **QiskitError** – Instruction schedule map is not provided.

  ## Methods

  <span id="qiskit-transpiler-passes-rzxcalibrationbuildernoecho-get-calibration" />

  ### get\_calibration

  <Function id="qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.get_calibration" name="get_calibration" signature="RZXCalibrationBuilderNoEcho.get_calibration(node_op, qubits)">
    Builds the calibration schedule for the RZXGate(theta) without echos.

    **Parameters**

    *   **node\_op** ([*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")) – Instruction of the RZXGate(theta). I.e. params\[0] is theta.
    *   **qubits** (*List*) – List of qubits for which to get the schedules. The first qubit is the control and the second is the target.

    **Returns**

    The calibration schedule for the RZXGate(theta).

    **Return type**

    schedule

    **Raises**

    *   **QiskitError** – if rotation angle is not assigned.
    *   **QiskitError** – If the control and target qubits cannot be identified, or the backend does not natively support the specified direction of the cx.
    *   **CalibrationNotAvailable** – RZX schedule cannot be built for input node.
  </Function>

  <span id="qiskit-transpiler-passes-rzxcalibrationbuildernoecho-name" />

  ### name

  <Function id="qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.name" name="name" signature="RZXCalibrationBuilderNoEcho.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-rzxcalibrationbuildernoecho-rescale-cr-inst" />

  ### rescale\_cr\_inst

  <Function id="qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.rescale_cr_inst" name="rescale_cr_inst" signature="static RZXCalibrationBuilderNoEcho.rescale_cr_inst(instruction, theta, sample_mult=16)">
    A builder macro to play stretched pulse.

    **Parameters**

    *   **instruction** ([*Play*](qiskit.pulse.instructions.Play "qiskit.pulse.instructions.play.Play")) – The instruction from which to create a new shortened or lengthened pulse.
    *   **theta** (*float*) – desired angle, pi/2 is assumed to be the angle that the pulse in the given play instruction implements.
    *   **sample\_mult** (*int*) – All pulses must be a multiple of sample\_mult.

    **Returns**

    Duration of stretched pulse.

    **Raises**

    **QiskitError** – if rotation angle is not assigned.

    **Return type**

    int
  </Function>

  <span id="qiskit-transpiler-passes-rzxcalibrationbuildernoecho-run" />

  ### run

  <Function id="qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.run" name="run" signature="RZXCalibrationBuilderNoEcho.run(dag)">
    Run the calibration adder pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.dagcircuit.DAGCircuit")) – DAG to schedule.

    **Returns**

    A DAG with calibrations added to it.

    **Return type**

    [*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.dagcircuit.DAGCircuit")
  </Function>

  <span id="qiskit-transpiler-passes-rzxcalibrationbuildernoecho-supported" />

  ### supported

  <Function id="qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.supported" name="supported" signature="RZXCalibrationBuilderNoEcho.supported(node_op, qubits)">
    Determine if a given node supports the calibration.

    **Parameters**

    *   **node\_op** ([*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")) – Target instruction object.
    *   **qubits** (*List*) – Integer qubit indices to check.

    **Returns**

    Return `True` is calibration can be provided.

    **Return type**

    bool
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.is_analysis_pass" name="is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.is_transformation_pass" name="is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

